--- a/templates/carritoDeProductos.html
+++ b/templates/carritoDeProductos.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css"  href="{{ url_for('static', filename='../static/assets/principal.css')}}">
     <link rel="stylesheet" type="text/css"  href="{{ url_for('static', filename='../static/assets/style-carrito.css')}}">
     <link rel="shortcut icon" href="{{url_for('static', filename='logo.ico')}}">
-    <title>Carrito</title>
+    <title>CARRITO DE COMPRAS</title>
 </head>
 <body>
     <header>
