--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
         </div>
         <div class="inputs">
             <div>
-                <span>Correo: </span>
+                <span>Email: </span>
                 <input type="email" class="username">
             </div>
             <div>
