--- a/templates/indexAdmin.html
+++ b/templates/indexAdmin.html
@@ -18,7 +18,7 @@
                 <img src="{{url_for('static', filename='logoEliana.png')}}" alt="Tio Elian's" width="100%" />
             </div>
             <div class="buscador">
-                <input type="search" aria-label="Search" aria-activedescendant autocomplete="off" class="buscar">
+                <input type="search" aria-label="Search" autocomplete="off" class="buscar">
                 <input type="image" src="{{url_for('static', filename='icone-loupe-noir.png')}}" class="img_buscar">
             </div>
             <a href=""><div class="imagenes">
