--- a/templates/modoAdmin.html
+++ b/templates/modoAdmin.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="es">
     {% for producto in productosRecibidosTodos %}
             <p> Nombre:{{producto.nombre}}----Precio:{{producto.precio}}----<a  href="/verDetalleDeProducto/{{ producto._id }}" >Ver detalles</a>----<a  href="/modificarProductoDelCatalogo/{{ producto._id }}" >Modificar</a>----<a  href="/eliminadorProductoDelCatalogo/{{ producto._id }}" >Eliminar</a></p> 
     {% endfor %}
