--- a/templates/principal.html
+++ b/templates/principal.html
@@ -1,3 +1,8 @@
 <html lang="es">
+    <head>
+        <title>
+            Pagina Principal
+        </title>
+    </head>
     <a href="login.html" >Check</a>
 </html>
