Unexpected unknown property margin-rigth

--- a/static/assets/style-index.css
+++ b/static/assets/style-index.css
@@ -118,7 +118,7 @@ select{
     background-color: rgb(219, 236, 255);
     border-radius: 15px;
     margin-left: 5rem;
-    margin-rigth: 3rem;
+    margin-right: 3rem;
     padding: 2px 3px 2px 3px;
 }
 
