Se incluyó encabezado <th>

--- a/templates/nuevaCuenta.html
+++ b/templates/nuevaCuenta.html
@@ -46,6 +46,11 @@
             <div class="principal">
                 <div class="inputs">
                     <table >
+                        <thead>
+                            <tr>
+                                <th>Información del Usuario</th>
+                            </tr>
+                        </thead>
                         <tbody>
                         <tr>
                             <td>
