Add an alt attribute to this image

--- a/templates/exceptionGeneral.html
+++ b/templates/exceptionGeneral.html
@@ -61,7 +61,7 @@
       <div class="bar"></div>
     </div>
     <div>
-      <img src="{{url_for('static', filename='/assets/images/gif.gif')}}" width="200" height="240"class="center">
+      <img src="{{url_for('static', filename='/assets/images/gif.gif')}}" width="200" height="240" alt="personas golpeandose la cabeza en senial de frustracion" class="center">
     </div>
   </div>
 </div>
