Las etiquetas de los formularios se asociaron correctamente

--- a/templates/nuevaCuenta.html
+++ b/templates/nuevaCuenta.html
@@ -63,7 +63,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <label>
+                                    <label for="apellido" class="form-label">
                                         Apellido
                                     </label>
                                 </div>   
@@ -73,7 +73,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <label>
+                                    <label for="correo" class="form-label">
                                         Correo
                                     </label>
                                 </div>   
@@ -83,7 +83,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <label>
+                                    <label for="password" class="form-label">
                                         Contraseña
                                     </label>
                                 </div>   
@@ -93,7 +93,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <label>
+                                    <label for="celular" class="form-label">
                                         Celular
                                     </label>
                                 </div>   
@@ -103,7 +103,7 @@
                         <tr>
                             <td>
                                 <div>
-                                    <label>
+                                    <label for="direccion" class="form-label">
                                         Dirección
                                     </label>
                                 </div>   
