Unexpected missing generic font family

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -44,7 +44,7 @@ body, html {
 
 /*---------------------------------------------*/
 a {
-	font-family: Poppins-Regular;
+	font-family: Poppins-Regular, sans-serif;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -74,7 +74,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-	font-family: Poppins-Regular;
+	font-family: Poppins-Regular, sans-serif;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -141,14 +141,14 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
 .txt1 {
-  font-family: Poppins-Regular;
+  font-family: Poppins-Regular, sans-serif;
   font-size: 13px;
   color: #666666;
   line-height: 1.5;
 }
 
 .txt2 {
-  font-family: Poppins-Regular;
+  font-family: Poppins-Regular, sans-serif;
   font-size: 13px;
   color: #333333;
   line-height: 1.5;
@@ -201,7 +201,7 @@ iframe {
 
 .login100-form-title {
   display: block;
-  font-family: Poppins-Bold;
+  font-family: Poppins-Bold, sans-serif;
   font-size: 30px;
   color: #333333;
   line-height: 1.2;
@@ -222,7 +222,7 @@ iframe {
 }
 
 .input100 {
-  font-family: Poppins-Regular;
+  font-family: Poppins-Regular, sans-serif;
   font-size: 15px;
   color: #555555;
   line-height: 1.2;
@@ -267,7 +267,7 @@ iframe {
 }
 
 .focus-input100::after {
-  font-family: Poppins-Regular;
+  font-family: Poppins-Regular, sans-serif;
   font-size: 15px;
   color: #999999;
   line-height: 1.2;
@@ -387,7 +387,7 @@ iframe {
 }
 
 .login100-form-btn {
-  font-family: Poppins-Medium;
+  font-family: Poppins-Medium, sans-serif;
   font-size: 15px;
   color: #fff;
   line-height: 1.2;
@@ -445,7 +445,7 @@ iframe {
   right: 0px;
   pointer-events: none;
 
-  font-family: Poppins-Regular;
+  font-family: Poppins-Regular, sans-serif;
   color: #c80000;
   font-size: 13px;
   line-height: 1.4;
@@ -462,7 +462,7 @@ iframe {
 
 .alert-validate::after {
   content: "\f06a";
-  font-family: FontAwesome;
+  font-family: FontAwesome, sans-serif;
   font-size: 16px;
   color: #c80000;
 
