--- a/static/assets/fonts/iconic/css/material-design-iconic-font.css
+++ b/static/assets/fonts/iconic/css/material-design-iconic-font.css
@@ -10,7 +10,7 @@
 }
 .zmdi {
   display: inline-block;
-  font: normal normal normal 14px/1 'Material-Design-Iconic-Font';
+  font: normal normal normal 14px/1 'Material-Design-Iconic-Font', sans-serif;
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
