Se implemento la integridad en los elementos script

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -32,7 +32,7 @@
 
 <link rel="stylesheet" href="{{url_for('static', filename='/assets/style.css')}}">  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha384-oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC"></script>
 
 
 <style>
