--- a/templates/exceptionGeneral.html
+++ b/templates/exceptionGeneral.html
@@ -66,6 +66,6 @@
   </div>
 </div>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.js" integrity="sha384-oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC"></script>
   <script src="{{url_for('static', filename='assets/main.js')}}" type="text/javascript"></script>
 </body>
