Se cambio el nombre de las funciones para que coincidan con la expresion regular

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -90,7 +90,7 @@
 							No tenes cuenta?
 						</span>
 
-						<a class="txt2" href="{{ url_for('irNuevaCuenta') }}">
+						<a class="txt2" href="{{ url_for('ir_nueva_cuenta') }}">
 							Registrate
 						</a>
 					</div>
