--- a/static/assets/principal.css
+++ b/static/assets/principal.css
@@ -16,10 +16,6 @@ body{
 
 header{
     color: white;
-    /*background-color: rgb(158, 33, 11);*/
-   /*background: linear-gradient(180deg, rgb(190, 44, 18) 0%, rgb(158, 33, 11) 35%, rgb(158, 33, 11) 100%);
-    */
-    /*rgb(143, 114, 50);*/
     background-color: rgb(0,113,220);
     padding: 0;
     flex-basis: 0%;
@@ -46,17 +42,12 @@ header div{
     padding: 0;
     margin: 0;
 }
-
-/* .buscador{
-    
-} */
 input.buscar{
     width: 35rem;
     height: 2.5rem;
     border-radius: 25px;
     border: 0px;
     position: relative;
-    /* outline: none; */
     bottom: 4px;
     padding: 2px;
     padding-left: 1.5rem;
@@ -69,8 +60,7 @@ input.buscar{
     position: relative;
     right: 40px;
     top: 5px;
-    /*float: left;
-*/}
+    }
 
 .logo{
     width: 150px;   
@@ -90,10 +80,6 @@ input.buscar{
 .arriba div img{
     padding: 0.2rem 0.2rem 0.2rem 0.2rem;
 }
-/*.arriba div img:hover{
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 30px;
-}*/
 
 .abajo{
     border-top: rgb(255, 255, 255) solid 1px;
